                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 12-30-2005 fixed: Black small movie window if video is paused before switching to GUI.
  - 12-30-2005 changed: Freed up unused memory in HQ pixel shader render method when in GUI mode.
  - 11-30-2005 changed: moved decision of what seeking to do into player and added workaround for files wich mplayer can't determin current percentage for.
  - 11-30-2005 fixed: the correct item is now highlighted when using Autoswitching with large icons in Video and Pictures
  - 11-03-2005 changed: Removed GetPTS and unified what m_pPlayer->GetTime returns. It now always returns time in milliseconds.
  - 11-03-2005 fixed: dialogs sometimes didn't popup via ActivateWindow() in <execute> tags.
  - 11-03-2005 fixed: ButtonMenu wasn't rendered if no label control was present.
  - 11-03-2005 fixed: mplayer wasn't freed after a playlist had ended.
  - 11-03-2005 added: [ 1160414 ] Added new methods to xbmc.Player python class. onPlayBackStopped() (user stop), getTotalTime() (duration of current media), getTime() (position of current media), seekTime( double pos ) (seek to specified position) - thanks to gimblefoot
  - 11-03-2005 added: [ 1160400 ] Added ControlCheckMark in Python - thanks to gimblefoot
  - 10-03-2005 added: My Music label format now accepts %F for filename
  - 10-03-2005 changed: My Music Nav window now uses a virtual path for better "back" handling (thanks to Elupus for the idea)
  - 10-03-2005 added: Initial support for VideoPlayer.Title for infolabels/infofadelabels.
  - 10-03-2005 added: Option to only remember selected item when traversing up the folder structure(parent folder), not down.